--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-  <div class="footer"></div>
-  </div>
 
   <h1>Andréa Frisör x Angelica Frisör</h1>
   <div class="header">
@@ -25,12 +23,6 @@
 
     <div id="id01" class="modal">¨
 
-
-
-      <div class="Gatuadress">
-        <h2>Köpmangatan 44c</h2>
-      </div>
-
       <form class="modal-content animate" action="/action_page.php" method="post">
         <div class="imgcontainer">
           <span onclick="document.getElementById('id01').style.display='none'" class="close"
@@ -39,22 +31,22 @@
         </div>
 
         <div class="container">
-          <label for="uname"><b>Username</b></label>
+          <label for="uname"><b>Användarnamn</b></label>
           <input type="text" placeholder="Enter Username" name="uname" required>
 
-          <label for="psw"><b>Password</b></label>
+          <label for="psw"><b>Lösenord</b></label>
           <input type="password" placeholder="Enter Password" name="psw" required>
 
           <button type="submit">Login</button>
           <label>
-            <input type="checkbox" checked="checked" name="remember"> Remember me
+            <input type="checkbox" checked="checked" name="remember"> Kom ihåg mig
           </label>
         </div>
 
         <div class="container" style="background-color:#f1f1f1">
           <button type="button" onclick="document.getElementById('id01').style.display='none'"
-            class="cancelbtn">Cancel</button>
-          <span class="psw">Forgot <a href="#">password?</a></span>
+            class="cancelbtn">Avsluta</button>
+          <span class="psw">Glömt <a href="#">Lösenord?</a></span>
         </div>
       </form>
 
